--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
       </p>
-      <button class="learnMore" type="button">Learn More</button>
+      <button class="btn" type="button">Learn More</button>
     </div>
     <div id="suvs">
       <h2>SUVs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.
       </p>
-      <button class="learnMore" type="button">Learn More</button>
+      <button class="btn" type="button">Learn More</button>
     </div>
     <div id="luxury">
       <h2>Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.
       </p>
-      <button class="learnMore" type="button">Learn More</button>
+      <button class="btn" type="button">Learn More</button>
     </div>
   </div>
   <div class="attribution">
