--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <div class="container">
     <div id="sedans">
+      <img src="./images/icon-sedans.svg" alt="sedan-icon">
       <h2>Sedans</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
@@ -26,6 +27,7 @@
       <button class="btn" type="button">Learn More</button>
     </div>
     <div id="suvs">
+      <img src="./images/icon-suvs.svg" alt="SUV-icon">
       <h2>SUVs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.
@@ -33,6 +35,7 @@
       <button class="btn" type="button">Learn More</button>
     </div>
     <div id="luxury">
+      <img src="./images/icon-luxury.svg" alt="luxury-icon">
       <h2>Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.
