--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="sedans">
+    <div id="sedans" class="card">
       <img src="./images/icon-sedans.svg" alt="sedan-icon">
       <h2>Sedans</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
@@ -26,7 +26,7 @@
       </p>
       <button class="btn" type="button">Learn More</button>
     </div>
-    <div id="suvs">
+    <div id="suvs" class="card">
       <img src="./images/icon-suvs.svg" alt="SUV-icon">
       <h2>SUVs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
@@ -34,7 +34,7 @@
       </p>
       <button class="btn" type="button">Learn More</button>
     </div>
-    <div id="luxury">
+    <div id="luxury" class="card">
       <img src="./images/icon-luxury.svg" alt="luxury-icon">
       <h2>Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
