--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div id="sedans" class="card">
       <img src="./images/icon-sedans.svg" alt="sedan-icon">
-      <h2>Sedans</h2>
+      <h2>SEDANS</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
       </p>
@@ -28,7 +28,7 @@
     </div>
     <div id="suvs" class="card">
       <img src="./images/icon-suvs.svg" alt="SUV-icon">
-      <h2>SUVs</h2>
+      <h2>SUVS</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.
       </p>
@@ -36,7 +36,7 @@
     </div>
     <div id="luxury" class="card">
       <img src="./images/icon-luxury.svg" alt="luxury-icon">
-      <h2>Luxury</h2>
+      <h2>LUXURY</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.
       </p>
