--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <button class="btn" type="button">Learn More</button>
     </div>
   </div>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://xenomee.github.io/Adrian-Trandafir/">Adrian Trandafir</a>.
+  </footer>
 </body>
 </html>
