--- a/index.html
+++ b/index.html
@@ -9,43 +9,41 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <div class="container">
-    <div id="sedans" class="card">
-      <img src="./images/icon-sedans.svg" alt="sedan-icon">
-      <h2>SEDANS</h2>
-      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-        or on your next road trip.
-      </p>
-      <button class="btn" type="button">Learn More</button>
+  <main>
+    <div class="container">
+      <div class="card">
+        <div class="card sedan">
+          <img src="./images/icon-sedans.svg" alt="sedan-icon">
+          <h2>SEDANS</h2>
+          <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+            or on your next road trip.
+          </p>
+          <button class="btn" type="button">Learn More</button>
+        </div>
+        <div class="card suv">
+          <img src="./images/icon-suvs.svg" alt="SUV-icon">
+          <h2>SUVS</h2>
+          <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+            and off-road adventures.
+          </p>
+          <button class="btn" type="button">Learn More</button>
+        </div>
+        <div class="card  luxury">
+          <img src="./images/icon-luxury.svg" alt="luxury-icon">
+          <h2>LUXURY</h2>
+          <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+            rental and arrive in style.
+          </p>
+          <button class="btn" type="button">Learn More</button>
+        </div>
+      </div>
     </div>
-    <div id="suvs" class="card">
-      <img src="./images/icon-suvs.svg" alt="SUV-icon">
-      <h2>SUVS</h2>
-      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-        and off-road adventures.
-      </p>
-      <button class="btn" type="button">Learn More</button>
-    </div>
-    <div id="luxury" class="card">
-      <img src="./images/icon-luxury.svg" alt="luxury-icon">
-      <h2>LUXURY</h2>
-      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-        rental and arrive in style.
-      </p>
-      <button class="btn" type="button">Learn More</button>
-    </div>
-  </div>
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://xenomee.github.io/Adrian-Trandafir/">Adrian Trandafir</a>.
-  </footer>
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://xenomee.github.io/Adrian-Trandafir/">Adrian Trandafir</a>.
+    </footer>
+  </main>
 </body>
 </html>
