change class name for column container from card to column-card

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div class="container">
-      <div class="card">
+      <div class="column-card">
         <div class="card sedan">
           <img src="./images/icon-sedans.svg" alt="sedan-icon">
           <h2>SEDANS</h2>
@@ -30,7 +30,7 @@
           </p>
           <button class="btn" type="button">Learn More</button>
         </div>
-        <div class="card  luxury">
+        <div class="card luxury">
           <img src="./images/icon-luxury.svg" alt="luxury-icon">
           <h2>LUXURY</h2>
           <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
