replace container div with main

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <main>
-    <div class="container">
-      <div class="column-card">
+    <main class="container">
+      <main class="column-card">
         <div class="card sedan">
           <img src="./images/icon-sedans.svg" alt="sedan-icon">
           <h2>SEDANS</h2>
@@ -38,12 +38,12 @@
           </p>
           <button class="btn" type="button">Learn More</button>
         </div>
-      </div>
+      </main>
       <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://xenomee.github.io/Adrian-Trandafir/">Adrian Trandafir</a>.
       </footer>
-    </div>
+    </main>
   </main>
 </body>
 </html>
