--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <main class="container">
       <main class="column-card">
-        <div class="card sedan">
+        <div class="card sedan-card">
           <img src="./images/icon-sedans.svg" alt="sedan-icon">
           <h2>SEDANS</h2>
           <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
@@ -22,7 +22,7 @@
           </p>
           <button class="btn" type="button">Learn More</button>
         </div>
-        <div class="card suv">
+        <div class="card suv-card">
           <img src="./images/icon-suvs.svg" alt="SUV-icon">
           <h2>SUVS</h2>
           <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
@@ -30,7 +30,7 @@
           </p>
           <button class="btn" type="button">Learn More</button>
         </div>
-        <div class="card luxury">
+        <div class="card luxury-card">
           <img src="./images/icon-luxury.svg" alt="luxury-icon">
           <h2>LUXURY</h2>
           <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
