--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
           <button class="btn" type="button">Learn More</button>
         </div>
       </main>
-      <footer class="attribution">
+      <footer>
+        <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://xenomee.github.io/Adrian-Trandafir/">Adrian Trandafir</a>.
+      </p>
       </footer>
     </main>
   </main>
