--- a/index.html
+++ b/index.html
@@ -20,52 +20,48 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    <main>
-      <main class="container">
-        <main class="column-card">
-          <div class="card sedan-card">
-            <img src="./images/icon-sedans.svg" alt="sedan-icon" />
-            <h2>SEDANS</h2>
-            <p>
-              Choose a sedan for its affordability and excellent fuel economy.
-              Ideal for cruising in the city or on your next road trip.
-            </p>
-            <button class="btn" type="button">Learn More</button>
-          </div>
-          <div class="card suv-card">
-            <img src="./images/icon-suvs.svg" alt="SUV-icon" />
-            <h2>SUVS</h2>
-            <p>
-              Take an SUV for its spacious interior, power, and versatility.
-              Perfect for your next family vacation and off-road adventures.
-            </p>
-            <button class="btn" type="button">Learn More</button>
-          </div>
-          <div class="card luxury-card">
-            <img src="./images/icon-luxury.svg" alt="luxury-icon" />
-            <h2>LUXURY</h2>
-            <p>
-              Cruise in the best car brands without the bloated prices. Enjoy
-              the enhanced comfort of a luxury rental and arrive in style.
-            </p>
-            <button class="btn" type="button">Learn More</button>
-          </div>
-        </main>
-        <footer>
-          <p class="attribution">
-            Challenge by
-            <a
-              href="https://www.frontendmentor.io?ref=challenge"
-              target="_blank"
-              >Frontend Mentor</a
-            >
-            Coded by
-            <a href="https://xenomee.github.io/Adrian-Trandafir/"
-              >Adrian Trandafir</a
-            >
+    <main class="container">
+      <main class="column-card">
+        <div class="card sedan-card">
+          <img src="./images/icon-sedans.svg" alt="sedan-icon" />
+          <h2>SEDANS</h2>
+          <p>
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
           </p>
-        </footer>
+          <button class="btn" type="button">Learn More</button>
+        </div>
+        <div class="card suv-card">
+          <img src="./images/icon-suvs.svg" alt="SUV-icon" />
+          <h2>SUVS</h2>
+          <p>
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <button class="btn" type="button">Learn More</button>
+        </div>
+        <div class="card luxury-card">
+          <img src="./images/icon-luxury.svg" alt="luxury-icon" />
+          <h2>LUXURY</h2>
+          <p>
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <button class="btn" type="button">Learn More</button>
+        </div>
       </main>
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >
+          Coded by
+          <a href="https://xenomee.github.io/Adrian-Trandafir/"
+            >Adrian Trandafir</a
+          >
+        </p>
+      </footer>
     </main>
   </body>
 </html>
