--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <main class="container">
-      <main class="column-card">
+      <div class="column-card">
         <div class="card sedan-card">
           <img src="./images/icon-sedans.svg" alt="sedan-icon" />
           <h2>SEDANS</h2>
@@ -49,12 +49,12 @@
           </p>
           <button class="btn" type="button">Learn More</button>
         </div>
-      </main>
+      </div>
       <footer>
         <p class="attribution">
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
+            >Frontend Mentor.</a
           >
           Coded by
           <a href="https://xenomee.github.io/Adrian-Trandafir/"
