--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
@@ -29,7 +28,7 @@
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <button class="btn" type="button">Learn More</button>
+          <a class="btn" type="button">Learn More</a>
         </div>
         <div class="card suv-card">
           <img src="./images/icon-suvs.svg" alt="SUV-icon" />
@@ -38,7 +37,7 @@
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <button class="btn" type="button">Learn More</button>
+          <a class="btn" type="button">Learn More</a>
         </div>
         <div class="card luxury-card">
           <img src="./images/icon-luxury.svg" alt="luxury-icon" />
@@ -47,7 +46,7 @@
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <button class="btn" type="button">Learn More</button>
+          <a class="btn" type="button">Learn More</a>
         </div>
       </div>
     </main>
