--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="column-card">
         <div class="card sedan-card">
           <img src="./images/icon-sedans.svg" alt="sedan-icon" />
-          <h2>SEDANS</h2>
-          <p>
+          <h2 class="card-title">SEDANS</h2>
+          <p class="card-description">
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
@@ -32,8 +32,8 @@
         </div>
         <div class="card suv-card">
           <img src="./images/icon-suvs.svg" alt="SUV-icon" />
-          <h2>SUVS</h2>
-          <p>
+          <h2 class="card-title">SUVS</h2>
+          <p class="card-description">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
@@ -41,8 +41,8 @@
         </div>
         <div class="card luxury-card">
           <img src="./images/icon-luxury.svg" alt="luxury-icon" />
-          <h2>LUXURY</h2>
-          <p>
+          <h2 class="card-title">LUXURY</h2>
+          <p class="card-description">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
