add class for cards icons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="container">
       <div class="column-card">
         <div class="card sedan-card">
-          <img src="./images/icon-sedans.svg" alt="sedan-icon" />
+          <img class="car-icon" src="./images/icon-sedans.svg" alt="sedan-icon" />
           <h2 class="card-title">SEDANS</h2>
           <p class="card-description">
             Choose a sedan for its affordability and excellent fuel economy.
@@ -31,7 +31,7 @@
           <a class="btn" type="button">Learn More</a>
         </div>
         <div class="card suv-card">
-          <img src="./images/icon-suvs.svg" alt="SUV-icon" />
+          <img class="car-icon" src="./images/icon-suvs.svg" alt="SUV-icon" />
           <h2 class="card-title">SUVS</h2>
           <p class="card-description">
             Take an SUV for its spacious interior, power, and versatility.
@@ -40,7 +40,7 @@
           <a class="btn" type="button">Learn More</a>
         </div>
         <div class="card luxury-card">
-          <img src="./images/icon-luxury.svg" alt="luxury-icon" />
+          <img class="car-icon" src="./images/icon-luxury.svg" alt="luxury-icon" />
           <h2 class="card-title">LUXURY</h2>
           <p class="card-description">
             Cruise in the best car brands without the bloated prices. Enjoy the
