--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    <main class="container">
-      <div class="column-card">
+    <main class="content">
+      <div class="container">
         <div class="card sedan-card">
           <img class="car-icon" src="./images/icon-sedans.svg" alt="sedan-icon" />
           <h2 class="card-title">SEDANS</h2>
