--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <a class="btn" type="button">Learn More</a>
+          <a class="btn" type="button" href="#">Learn More</a>
         </div>
         <div class="card suv-card">
           <img class="car-icon" src="./images/icon-suvs.svg" alt="SUV-icon" />
@@ -37,7 +37,7 @@
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <a class="btn" type="button">Learn More</a>
+          <a class="btn" type="button" href="#">Learn More</a>
         </div>
         <div class="card luxury-card">
           <img class="car-icon" src="./images/icon-luxury.svg" alt="luxury-icon" />
@@ -46,7 +46,7 @@
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <a class="btn" type="button">Learn More</a>
+          <a class="btn" type="button" href="#">Learn More</a>
         </div>
       </div>
     </main>
