--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <main class="content">
+  <main>
     <div class="container">
       <div class="card sedan-card">
         <img class="car-icon" src="./images/icon-sedans.svg" alt="sedan-icon" />
