replace div tag with section tag for the 'container' class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <div class="container">
+    <section class="container">
       <div class="card sedan-card">
         <img class="car-icon" src="./images/icon-sedans.svg" alt="sedan-icon" />
         <h2 class="card-title">SEDANS</h2>
@@ -43,7 +43,7 @@
         </p>
         <a class="btn" type="button" href="#">Learn More</a>
       </div>
-    </div>
+    </section>
   </main>
   <footer>
     <p class="attribution">
