rename all classes after BEM naming convetion

--- a/index.html
+++ b/index.html
@@ -15,33 +15,39 @@
 
 <body>
   <main>
-    <section class="container">
-      <div class="card sedan-card">
+    <section class="card">
+      <div class="card__column card__column--sedan">
         <img class="car-icon" src="./images/icon-sedans.svg" alt="sedan-icon" />
-        <h2 class="card-title">SEDANS</h2>
-        <p class="card-description">
+        <div class="card__content">
+          <h2 class="card__title">SEDANS</h2>
+          <p class="card-description">
           Choose a sedan for its affordability and excellent fuel economy.
           Ideal for cruising in the city or on your next road trip.
-        </p>
-        <a class="btn" type="button" href="#">Learn More</a>
+          </p>
+          <a class="btn" type="button" href="#">Learn More</a>
+       </div>
       </div>
-      <div class="card suv-card">
+      <div class="card__column suv-card__column--suv">
         <img class="car-icon" src="./images/icon-suvs.svg" alt="SUV-icon" />
-        <h2 class="card-title">SUVS</h2>
-        <p class="card-description">
-          Take an SUV for its spacious interior, power, and versatility.
-          Perfect for your next family vacation and off-road adventures.
-        </p>
-        <a class="btn" type="button" href="#">Learn More</a>
+        <div class="card__content">
+          <h2 class="card__title">SUVS</h2>
+          <p class="card-description">
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <a class="btn" type="button" href="#">Learn More</a>
+        </div>
       </div>
-      <div class="card luxury-card">
+      <div class="card__column card__column--sedan">
         <img class="car-icon" src="./images/icon-luxury.svg" alt="luxury-icon" />
-        <h2 class="card-title">LUXURY</h2>
-        <p class="card-description">
-          Cruise in the best car brands without the bloated prices. Enjoy the
-          enhanced comfort of a luxury rental and arrive in style.
-        </p>
-        <a class="btn" type="button" href="#">Learn More</a>
+        <div class="card__content">
+          <h2 class="card__title">LUXURY</h2>
+          <p class="card-description">
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <a class="btn" type="button" href="#">Learn More</a>
+        </div>
       </div>
     </section>
   </main>
