remove alt text from icon images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <section class="card">
       <div class="card__column card__column--sedan">
-        <img class="car-icon" src="./images/icon-sedans.svg" alt="sedan-icon" />
+        <img class="car-icon" src="./images/icon-sedans.svg" alt="" />
         <div class="card__content">
           <h2 class="card__title">SEDANS</h2>
           <p class="card-description">
@@ -28,7 +28,7 @@
        </div>
       </div>
       <div class="card__column suv-card__column--suv">
-        <img class="car-icon" src="./images/icon-suvs.svg" alt="SUV-icon" />
+        <img class="car-icon" src="./images/icon-suvs.svg" alt="" />
         <div class="card__content">
           <h2 class="card__title">SUVS</h2>
           <p class="card-description">
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="card__column card__column--sedan">
-        <img class="car-icon" src="./images/icon-luxury.svg" alt="luxury-icon" />
+        <img class="car-icon" src="./images/icon-luxury.svg" alt="" />
         <div class="card__content">
           <h2 class="card__title">LUXURY</h2>
           <p class="card-description">
