--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <section class="card">
-      <div class="card__column card__column--sedan">
+      <div class="card__column card__column--sedan" data-icon="sedan">
         <img class="car-icon" src="./images/icon-sedans.svg" alt="" />
         <div class="card__content">
           <h2 class="card__title">SEDANS</h2>
@@ -27,7 +27,7 @@
           <a class="btn" type="button" href="#">Learn More</a>
        </div>
       </div>
-      <div class="card__column suv-card__column--suv">
+      <div class="card__column suv-card__column--suv" data-icon="suv">
         <img class="car-icon" src="./images/icon-suvs.svg" alt="" />
         <div class="card__content">
           <h2 class="card__title">SUVS</h2>
@@ -38,7 +38,7 @@
           <a class="btn" type="button" href="#">Learn More</a>
         </div>
       </div>
-      <div class="card__column card__column--sedan">
+      <div class="card__column card__column--sedan" data-icon="luxury">
         <img class="car-icon" src="./images/icon-luxury.svg" alt="" />
         <div class="card__content">
           <h2 class="card__title">LUXURY</h2>
