fix modifier classes names

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="btn" href="#">Learn More</a>
        </div>
       </div>
-      <div class="card__column suv-card__column--suv" data-icon="suv">
+      <div class="card__column card__column--suv" data-icon="suv">
         <div class="card__content">
           <h2 class="card__title">SUVS</h2>
           <p class="card-description">
@@ -36,7 +36,7 @@
           <a class="btn" href="#">Learn More</a>
         </div>
       </div>
-      <div class="card__column card__column--sedan" data-icon="luxury">
+      <div class="card__column card__column--luxury" data-icon="luxury">
         <div class="card__content">
           <h2 class="card__title">LUXURY</h2>
           <p class="card-description">
