--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="card__column card__column--sedan" data-icon="sedan">
         <div class="card__content">
           <h2 class="card__title">SEDANS</h2>
-          <p class="card-description">
+          <p class="card__description">
           Choose a sedan for its affordability and excellent fuel economy.
           Ideal for cruising in the city or on your next road trip.
           </p>
@@ -29,7 +29,7 @@
       <div class="card__column card__column--suv" data-icon="suv">
         <div class="card__content">
           <h2 class="card__title">SUVS</h2>
-          <p class="card-description">
+          <p class="card__description">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
@@ -39,7 +39,7 @@
       <div class="card__column card__column--luxury" data-icon="luxury">
         <div class="card__content">
           <h2 class="card__title">LUXURY</h2>
-          <p class="card-description">
+          <p class="card__description">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
