add vehicle icons before card's content

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <main>
     <section class="card">
-      <div class="card__column card__column--sedan" data-icon="sedan">
-        <div class="card__content">
+      <div class="card__column card__column--sedan">
+        <div class="card__content" data-icon="sedan">
           <h2 class="card__title">SEDANS</h2>
           <p class="card__description">
           Choose a sedan for its affordability and excellent fuel economy.
@@ -26,8 +26,8 @@
           <a class="btn btn--sedan" href="#">Learn More</a>
        </div>
       </div>
-      <div class="card__column card__column--suv" data-icon="suv">
-        <div class="card__content">
+      <div class="card__column card__column--suv">
+        <div class="card__content" data-icon="suv">
           <h2 class="card__title">SUVS</h2>
           <p class="card__description">
             Take an SUV for its spacious interior, power, and versatility.
@@ -36,8 +36,8 @@
           <a class="btn btn--suv" href="#">Learn More</a>
         </div>
       </div>
-      <div class="card__column card__column--luxury" data-icon="luxury">
-        <div class="card__content">
+      <div class="card__column card__column--luxury">
+        <div class="card__content" data-icon="luxury">
           <h2 class="card__title">LUXURY</h2>
           <p class="card__description">
             Cruise in the best car brands without the bloated prices. Enjoy the
