--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <body>
   <main>
-    <section class="card">
+    <article class="card">
       <div class="card__column card__column--sedan">
         <div class="card__content" data-icon="sedan">
           <h2 class="card__title">SEDANS</h2>
           <p class="card__description">
-          Choose a sedan for its affordability and excellent fuel economy.
-          Ideal for cruising in the city or on your next road trip.
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
           </p>
           <a class="btn btn--sedan" href="#">Learn More</a>
-       </div>
+        </div>
       </div>
       <div class="card__column card__column--suv">
         <div class="card__content" data-icon="suv">
@@ -46,7 +46,7 @@
           <a class="btn btn--luxury" href="#">Learn More</a>
         </div>
       </div>
-    </section>
+    </article>
   </main>
 </body>
 
