rename container's class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <article>
-      <div class="card">
+      <div class="cars_card">
         <div class="card__column card__column--sedan">
           <div class="card__content" data-icon="sedan">
             <h2 class="card__title">SEDANS</h2>
