--- a/index.html
+++ b/index.html
@@ -17,36 +17,38 @@
   <main>
     <article>
       <div class="cars_card">
-        <div class="card__column card__column--sedan">
-          <div class="card__content" data-icon="sedan">
-            <h2 class="card__title">SEDANS</h2>
-            <p class="card__description">
-              Choose a sedan for its affordability and excellent fuel economy.
-              Ideal for cruising in the city or on your next road trip.
-            </p>
-            <a class="btn btn--sedan" href="#">Learn More</a>
+        <ul class="car-list">
+          <div class="card__column card__column--sedan">
+            <div class="card__content" data-icon="sedan">
+              <h2 class="card__title">SEDANS</h2>
+              <p class="card__description">
+                Choose a sedan for its affordability and excellent fuel economy.
+                Ideal for cruising in the city or on your next road trip.
+              </p>
+              <a class="btn btn--sedan" href="#">Learn More</a>
+            </div>
           </div>
-        </div>
-        <div class="card__column card__column--suv">
-          <div class="card__content" data-icon="suv">
-            <h2 class="card__title">SUVS</h2>
-            <p class="card__description">
-              Take an SUV for its spacious interior, power, and versatility.
-              Perfect for your next family vacation and off-road adventures.
-            </p>
-            <a class="btn btn--suv" href="#">Learn More</a>
+          <div class="card__column card__column--suv">
+            <div class="card__content" data-icon="suv">
+              <h2 class="card__title">SUVS</h2>
+              <p class="card__description">
+                Take an SUV for its spacious interior, power, and versatility.
+                Perfect for your next family vacation and off-road adventures.
+              </p>
+              <a class="btn btn--suv" href="#">Learn More</a>
+            </div>
           </div>
-        </div>
-        <div class="card__column card__column--luxury">
-          <div class="card__content" data-icon="luxury">
-            <h2 class="card__title">LUXURY</h2>
-            <p class="card__description">
-              Cruise in the best car brands without the bloated prices. Enjoy the
-              enhanced comfort of a luxury rental and arrive in style.
-            </p>
-            <a class="btn btn--luxury" href="#">Learn More</a>
+          <div class="card__column card__column--luxury">
+            <div class="card__content" data-icon="luxury">
+              <h2 class="card__title">LUXURY</h2>
+              <p class="card__description">
+                Cruise in the best car brands without the bloated prices. Enjoy the
+                enhanced comfort of a luxury rental and arrive in style.
+              </p>
+              <a class="btn btn--luxury" href="#">Learn More</a>
+            </div>
           </div>
-        </div>
+        </ul>
       </div>
     </article>
   </main>
