replace column div tags with li tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <article>
       <div class="cars_card">
         <ul class="car-list">
-          <div class="card__column card__column--sedan">
+          <li class="card__column card__column--sedan">
             <div class="card__content" data-icon="sedan">
               <h2 class="card__title">SEDANS</h2>
               <p class="card__description">
@@ -27,8 +27,8 @@
               </p>
               <a class="btn btn--sedan" href="#">Learn More</a>
             </div>
-          </div>
-          <div class="card__column card__column--suv">
+          </li>
+          <li class="card__column card__column--suv">
             <div class="card__content" data-icon="suv">
               <h2 class="card__title">SUVS</h2>
               <p class="card__description">
@@ -37,8 +37,8 @@
               </p>
               <a class="btn btn--suv" href="#">Learn More</a>
             </div>
-          </div>
-          <div class="card__column card__column--luxury">
+          </li>
+          <li class="card__column card__column--luxury">
             <div class="card__content" data-icon="luxury">
               <h2 class="card__title">LUXURY</h2>
               <p class="card__description">
@@ -47,7 +47,7 @@
               </p>
               <a class="btn btn--luxury" href="#">Learn More</a>
             </div>
-          </div>
+          </li>
         </ul>
       </div>
     </article>
