place data attributes inside each list item opening tag

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <article>
       <div class="cars_card">
         <ul class="car-list">
-          <li class="card__column card__column--sedan">
-            <div class="card__content" data-icon="sedan">
+          <li class="card__column card__column--sedan" data-icon="sedan">
+            <div class="card__content">
               <h2 class="card__title">SEDANS</h2>
               <p class="card__description">
                 Choose a sedan for its affordability and excellent fuel economy.
@@ -28,8 +28,8 @@
               <a class="btn btn--sedan" href="#">Learn More</a>
             </div>
           </li>
-          <li class="card__column card__column--suv">
-            <div class="card__content" data-icon="suv">
+          <li class="card__column card__column--suv" data-icon="suv">
+            <div class="card__content">
               <h2 class="card__title">SUVS</h2>
               <p class="card__description">
                 Take an SUV for its spacious interior, power, and versatility.
@@ -38,8 +38,8 @@
               <a class="btn btn--suv" href="#">Learn More</a>
             </div>
           </li>
-          <li class="card__column card__column--luxury">
-            <div class="card__content" data-icon="luxury">
+          <li class="card__column card__column--luxury" data-icon="luxury">
+            <div class="card__content">
               <h2 class="card__title">LUXURY</h2>
               <p class="card__description">
                 Cruise in the best car brands without the bloated prices. Enjoy the
