--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
 <body>
   <main>
     <article>
-      <div class="cars_card">
+      <div class="cars">
         <ul class="car-list">
-          <li class="card__column card__column--sedan" data-icon="sedan">
-            <h2 class="card__title">SEDANS</h2>
-            <p class="card__description">
+          <li class="car-list__item car-list__item--sedan" data-icon="sedan">
+            <h2 class="car-type">SEDANS</h2>
+            <p class="car-description">
               Choose a sedan for its affordability and excellent fuel economy.
               Ideal for cruising in the city or on your next road trip.
             </p>
             <a class="btn btn--sedan" href="#">Learn More</a>
 
           </li>
-          <li class="card__column card__column--suv" data-icon="suv">
-            <h2 class="card__title">SUVS</h2>
-            <p class="card__description">
+          <li class="car-list__item car-list__item--suv" data-icon="suv">
+            <h2 class="car-type">SUVS</h2>
+            <p class="car-description">
               Take an SUV for its spacious interior, power, and versatility.
               Perfect for your next family vacation and off-road adventures.
             </p>
             <a class="btn btn--suv" href="#">Learn More</a>
 
           </li>
-          <li class="card__column card__column--luxury" data-icon="luxury">
-            <h2 class="card__title">LUXURY</h2>
-            <p class="card__description">
+          <li class="car-list__item car-list__item--luxury" data-icon="luxury">
+            <h2 class="car-type">LUXURY</h2>
+            <p class="car-description">
               Cruise in the best car brands without the bloated prices. Enjoy the
               enhanced comfort of a luxury rental and arrive in style.
             </p>
