--- a/index.html
+++ b/index.html
@@ -15,39 +15,36 @@
 
 <body>
   <main>
-    <article>
-      <div class="cars">
-        <ul class="car-list">
-          <li class="car-list__item car-list__item--sedan" data-icon="sedan">
-            <h2 class="car-type">SEDANS</h2>
-            <p class="car-description">
-              Choose a sedan for its affordability and excellent fuel economy.
-              Ideal for cruising in the city or on your next road trip.
-            </p>
-            <a class="btn btn--sedan" href="#">Learn More</a>
+    <article class="cars">
+      <ul class="car-list">
+        <li class="car-list__item car-list__item--sedan" data-icon="sedan">
+          <h2 class="car-type">SEDANS</h2>
+          <p class="car-description">
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+          <a class="btn btn--sedan" href="#">Learn More</a>
 
-          </li>
-          <li class="car-list__item car-list__item--suv" data-icon="suv">
-            <h2 class="car-type">SUVS</h2>
-            <p class="car-description">
-              Take an SUV for its spacious interior, power, and versatility.
-              Perfect for your next family vacation and off-road adventures.
-            </p>
-            <a class="btn btn--suv" href="#">Learn More</a>
+        </li>
+        <li class="car-list__item car-list__item--suv" data-icon="suv">
+          <h2 class="car-type">SUVS</h2>
+          <p class="car-description">
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <a class="btn btn--suv" href="#">Learn More</a>
 
-          </li>
-          <li class="car-list__item car-list__item--luxury" data-icon="luxury">
-            <h2 class="car-type">LUXURY</h2>
-            <p class="car-description">
-              Cruise in the best car brands without the bloated prices. Enjoy the
-              enhanced comfort of a luxury rental and arrive in style.
-            </p>
-            <a class="btn btn--luxury" href="#">Learn More</a>
-          </li>
+        </li>
+        <li class="car-list__item car-list__item--luxury" data-icon="luxury">
+          <h2 class="car-type">LUXURY</h2>
+          <p class="car-description">
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <a class="btn btn--luxury" href="#">Learn More</a>
+        </li>
 
-        </ul>
-
-      </div>
+      </ul>
 
     </article>
   </main>
