add utility class to h1 heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <article class="cars">
-      <h1>Types of vehicles</h1>
+      <h1 class="visually-hidden">Types of vehicles</h1>
       <ul class="car-list">
         <li class="car-list__item car-list__item--sedan" data-icon="sedan">
           <h2 class="car-type">SEDANS</h2>
